--- a/task-4.html
+++ b/task-4.html
@@ -11,15 +11,15 @@
     <p><a href="./index.html">Go back</a></p>
 
     <form class="login-form">
-      <label>
+      <label class="label-email">
         Email
-        <input type="email" name="email" />
+        <input class="email" type="email" name="email" />
       </label>
-      <label>
+      <label class="label-password">
         Password
-        <input type="password" name="password" />
+        <input class="password" type="password" name="password" />
       </label>
-      <button type="submit">Login</button>
+      <button class="btn-submit" type="submit">Login</button>
     </form>
 
     <script src="./js/task-4.js" type="module"></script>
